samples/_failures_safe/1761622416_1a8270_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83ba1d4e.c: In function ‘main’:
./samples/SAFE/__tmp_83ba1d4e.c:135:9: error: expected declaration or statement at end of input
  135 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_83ba1d4e.c:135:9: error: expected declaration or statement at end of input
